# kanji-cards

./: .gitignore  .gitmodules  .ignore  CMakeLists.txt  README.md  build_run_test.sh
data/: .gitignore  JMdict_e_sample.xml  kanji_freqency_list_sample.csv  kanjidic2_sample.xml
src/: CImg.h  build_run_test.sh  catch.hpp  constants.hpp  create_JMdict_e.xml.sample.sh  create_card.cpp  create_card.hpp  create_card_tests.cpp  frequency.cpp  frequency.hpp  frequency_tests.cpp  kanji_data.cpp  kanji_data.hpp  kanji_data_tests.cpp  main.cpp  sample.xml  stroke_order.cpp  stroke_order.hpp  stroke_order_tests.cpp  tests.cpp  tests_main.cpp  util.cpp  util.hpp  util_tests.cpp  word_data.cpp  word_data.hpp  word_data_tests.cpp
